Refactoring to vector direction instead of enumeration

--- a/CSharp/Langton.Tests/Langton.Tests.csproj
+++ b/CSharp/Langton.Tests/Langton.Tests.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="AntTest.cs" />
     <Compile Include="BoardTest.cs" />
+    <Compile Include="DirectionTest.cs" />
     <Compile Include="GameTest.cs" />
     <Compile Include="PositionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
