--- a/CSharp/Langton/Langton.csproj
+++ b/CSharp/Langton/Langton.csproj
@@ -44,13 +44,13 @@
   <ItemGroup>
     <Compile Include="Ant.cs" />
     <Compile Include="Board.cs" />
-    <Compile Include="Orientation.cs" />
+    <Compile Include="Direction.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="IAnt.cs" />
     <Compile Include="IBoard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Turn.cs" />
+    <Compile Include="Rotation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
